--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,10 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - fix_workspaceservice
+ #   tags:
+ #     - '*'
 
 jobs:
   build:
